Created Fees API
