# src/main/java/com/pricing/backend/eligibilityreason/EligibilityReasonController.java
@@ -4,10 +4,10 @@ import java.util.List;
 
 import com.pricing.backend.config.RecordNotFoundException;
 import com.pricing.backend.generated.api.EligibilityReasonsApi;
-import com.pricing.backend.generated.model.EligibilityReasonDetail;
-import com.pricing.backend.generated.model.EligibilityReasonListItem;
-import com.pricing.backend.generated.model.EligibilityReasonOptions;
-import com.pricing.backend.generated.model.EligibilityReasonRequest;
+import com.pricing.backend.generated.model.ReasonDetail;
+import com.pricing.backend.generated.model.ReasonListItem;
+import com.pricing.backend.generated.model.ReasonOptions;
+import com.pricing.backend.generated.model.ReasonRequest;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -22,34 +22,32 @@ public class EligibilityReasonController implements EligibilityReasonsApi {
 	}
 
 	@Override
-	public ResponseEntity<List<EligibilityReasonListItem>> listEligibilityReasons() {
+	public ResponseEntity<List<ReasonListItem>> listReasons() {
 		return ResponseEntity.ok(eligibilityReasonService.list());
 	}
 
 	@Override
-	public ResponseEntity<EligibilityReasonDetail> getEligibilityReason(Long id) {
-		EligibilityReasonDetail eligibilityReason = eligibilityReasonService.get(id)
+	public ResponseEntity<ReasonDetail> getReason(Long id) {
+		ReasonDetail eligibilityReason = eligibilityReasonService.get(id)
 				.orElseThrow(() -> new RecordNotFoundException("Eligibility reason", id));
 
 		return ResponseEntity.ok(eligibilityReason);
 	}
 
 	@Override
-	public ResponseEntity<EligibilityReasonOptions> getEligibilityReasonOptions() {
+	public ResponseEntity<ReasonOptions> getReasonOptions() {
 		return ResponseEntity.ok(eligibilityReasonService.getOptions());
 	}
 
 	@Override
-	public ResponseEntity<EligibilityReasonDetail> createEligibilityReason(
-			EligibilityReasonRequest eligibilityReasonRequest) {
+	public ResponseEntity<ReasonDetail> createReason(ReasonRequest eligibilityReasonRequest) {
 		return ResponseEntity.status(HttpStatus.CREATED)
 				.body(eligibilityReasonService.create(eligibilityReasonRequest));
 	}
 
 	@Override
-	public ResponseEntity<EligibilityReasonDetail> updateEligibilityReason(Long id,
-			EligibilityReasonRequest eligibilityReasonRequest) {
-		EligibilityReasonDetail eligibilityReason = eligibilityReasonService
+	public ResponseEntity<ReasonDetail> updateReason(Long id, ReasonRequest eligibilityReasonRequest) {
+		ReasonDetail eligibilityReason = eligibilityReasonService
 				.update(id, eligibilityReasonRequest)
 				.orElseThrow(() -> new RecordNotFoundException("Eligibility reason", id));
 
@@ -57,7 +55,7 @@ public class EligibilityReasonController implements EligibilityReasonsApi {
 	}
 
 	@Override
-	public ResponseEntity<Void> deleteEligibilityReason(Long id) {
+	public ResponseEntity<Void> deleteReason(Long id) {
 		if (eligibilityReasonService.delete(id)) {
 			return ResponseEntity.noContent().build();
 		}
