# src/main/java/com/pricing/backend/fee/FeeEntity.java
@@ -1,0 +1,48 @@
+package com.pricing.backend.fee;
+
+import java.time.OffsetDateTime;
+
+import com.pricing.backend.generated.model.ProductType;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Entity
+@AllArgsConstructor
+@Builder
+@Getter
+@Setter
+@NoArgsConstructor
+@Table(name = "fees")
+public class FeeEntity {
+
+	@Id
+	@GeneratedValue(strategy = GenerationType.IDENTITY)
+	private Long id;
+
+	@Column(name = "fee_code", nullable = false, unique = true, length = 8)
+	private String feeCode;
+
+	@Column(name = "fee_name", nullable = false, length = 100)
+	private String feeName;
+
+	@Enumerated(EnumType.STRING)
+	@Column(name = "product_type", nullable = false, length = 20)
+	private ProductType productType;
+
+	@Column(name = "updated_on", nullable = false)
+	private OffsetDateTime updatedOn;
+
+	@Column(name = "updated_by", nullable = false, length = 100)
+	private String updatedBy;
+}
